tests/negative/traits/mismatch_param_type.orng
// mismatch_param_type.orng:10:23: error: trait `My_Trait` specifies type `Int` for method `f`, got `Char`
//     fn f(self, x: Char) -> () {}
//                      ^
// 
trait My_Trait {
    fn f(self, x: Int) -> ()
}

impl My_Trait for Int {
    fn f(self, x: Char) -> () {}
}

fn main() -> Int {
    4
}